# BBMEET

./: .env.template  .flutter-plugins-dependencies  .gitattributes  .gitignore  Makefile  README.md  SECURITY_SETUP.md  analysis_options.yaml  bb-sdk-keypair.pem.bak  bb-sdk-sfu.service  build_log.txt  build_log_attempt8.txt  build_log_cache_verify.txt  build_log_debug_fail.txt  build_log_ecr_cache.txt  build_log_error.txt  build_log_library_pull_fail.txt  build_log_manual_fail.txt  build_log_manual_repo_fail.txt  build_log_nightly.txt  build_log_public_ecr.txt  build_log_pull_fail.txt  build_log_sfu_build_fail.txt  build_log_signalling_fail.json  build_log_signalling_fail.txt  buildspec_api.yml  buildspec_web.yml  cf_config_fixed.json  cf_update.json  check_web_dir.ps1  codebuild_secret_policy.json  complete_deploy.ps1  correct_env.txt  correct_env_v2.txt  correct_env_v3.txt  correct_env_v4.txt  correct_env_v5.txt  database_patch.ts  deploy_api.ps1  deploy_final.sh  (+26 more)
.dart_tool/: package_config.json  package_graph.json
.dart_tool/extension_discovery/: vs_code.json
.github/workflows/: api-deploy.yml  ci.yml  deploy.yml  media-deploy.yml  release.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro  waterbus.jks
bb-sdk-api/: .dockerignore  docker-compose.prod.yaml  dockerfile  ecosystem.config.js  package-lock.json  package.json
bb-sdk-api/src/: app.module.ts  main.ts
bb-sdk-media/: .gitignore  Cargo.toml  README-ARCHITECTURE.md  README.md  buildspec-core.yml  buildspec-egress.yml  rust-toolchain.toml
bb-sdk-media/docker/: Cargo.toml.sfu  Cargo.toml.signalling  dockerfile.sfu  dockerfile.signalling  sfu_entrypoint.sh
bb-sdk-media/hls/: .gitkeep
bb-sdk-media/moq-gst-fork/: COMMIT_EDITMSG  Cargo.toml  FIX_NOTES.md  config  index  (+1 more)
bb-sdk-media/research/moq-gst-fixed/: Cargo.toml  FIX_NOTES.md  README.md  WINDOWS_BUILD_ISSUE.md  build.ps1  build.rs
bb-sdk-media/research/moq-gst-fixed/src/: lib.rs
bb-sdk-media/research/moq-gst-fixed/src/sink/: imp.rs
bb-sdk-media/research/moq-gst-fixed/src/source/: imp.rs
bb-sdk-media/sfu/: Cargo.toml
bb-sdk-media/sfu/src/: main.rs
bb-sdk-media/signalling/: Cargo.toml
bb-sdk-media/signalling/src/: main.rs
bb-sdk-media/signalling/src/core/api/: salvo_config.rs
benchmark/: plot_benchmark_results.gp
infrastructure/: buildspec_media.yml  codestar_policy.json  create_ssm_params.bat  dns_switch_api.json  pipeline-api-update.json  pipeline-media-update.json  ssm_read_policy.json  task-definition-sfu.json  task-definition-signalling.json  task-definition.json
ios/: Podfile
lib/: amplifyconfiguration.dart  firebase_options.dart  main.dart
linux/: CMakeLists.txt  my_application.cc
macos/: Podfile
web/: index.html  main.js  virtual-background.js
windows/: CMakeLists.txt
(+290 files in other folders)
