[package]
name = "signalling"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "signalling"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

# WebRTC and networking
webrtc = "0.10"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Database (if needed)
# sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }

# Environment
dotenv = "0.15"

